--- a/ngraph/test/CMakeLists.txt
+++ b/ngraph/test/CMakeLists.txt
@@ -288,6 +288,7 @@ set(SRC
     visitors/op/topk.cpp
     visitors/op/transpose.cpp
     visitors/op/unsqueeze.cpp
+    visitors/op/variadic_split.cpp
     uint4.cpp
     util.cpp
 )
@@ -466,6 +467,7 @@ set(MULTI_TEST_SRC
     backend/unhandled_op.in.cpp
     backend/unsqueeze.in.cpp
     backend/validate_call.in.cpp
+    backend/variadic_split.in.cpp
     backend/zero_sized.in.cpp
 )
 
