OV new package structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -208,13 +208,13 @@ ie_cpack_add_component(demo_scripts DEPENDS core)
 
 if(UNIX)
     install(DIRECTORY scripts/demo/
-            DESTINATION deployment_tools/demo
+            DESTINATION extras/open_model_zoo/demo
             COMPONENT demo_scripts
             USE_SOURCE_PERMISSIONS
             PATTERN *.bat EXCLUDE)
 elseif(WIN32)
     install(DIRECTORY scripts/demo/
-            DESTINATION deployment_tools/demo
+            DESTINATION extras/open_model_zoo/demo
             COMPONENT demo_scripts
             USE_SOURCE_PERMISSIONS
             PATTERN *.sh EXCLUDE)
