--- a/model-optimizer/CMakeLists.txt
+++ b/model-optimizer/CMakeLists.txt
@@ -18,7 +18,7 @@ configure_file(
     @ONLY)
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
-        DESTINATION deployment_tools/model_optimizer
+        DESTINATION tools/model_optimizer
         USE_SOURCE_PERMISSIONS
         COMPONENT model_optimizer
         PATTERN ".*" EXCLUDE
