--- a/inference-engine/ie_bridges/python/CMakeLists.txt
+++ b/inference-engine/ie_bridges/python/CMakeLists.txt
@@ -93,7 +93,7 @@ install(PROGRAMS src/openvino/__init__.py
 ie_cpack_add_component(python_samples)
 
 install(DIRECTORY sample/
-        DESTINATION ${IE_CPACK_IE_DIR}/samples/python
+        DESTINATION samples/python
         COMPONENT python_samples)
 
 ie_cpack(${PYTHON_VERSION} python_samples)
