--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -30,11 +30,11 @@ if(ENABLE_PYTHON)
     ie_cpack_add_component(python_tools)
 
     install(DIRECTORY ../inference-engine/tools/benchmark_tool
-            DESTINATION deployment_tools/tools
+            DESTINATION tools
             COMPONENT python_tools)
 
     install(DIRECTORY ../inference-engine/tools/cross_check_tool
-            DESTINATION deployment_tools/tools
+            DESTINATION tools
             COMPONENT python_tools)
 
     install(FILES README.md
