--- a/inference-engine/src/inference_engine/CMakeLists.txt
+++ b/inference-engine/src/inference_engine/CMakeLists.txt
@@ -164,7 +164,7 @@ target_link_libraries(${TARGET_NAME} PRIVATE pugixml openvino::itt ${CMAKE_DL_LI
 
 target_include_directories(${TARGET_NAME} INTERFACE
             $<BUILD_INTERFACE:${PUBLIC_HEADERS_DIR}>
-            $<INSTALL_INTERFACE:runtime/include>
+            $<INSTALL_INTERFACE:runtime/include/ie>
     PRIVATE $<TARGET_PROPERTY:${TARGET_NAME}_plugin_api,INTERFACE_INCLUDE_DIRECTORIES>
             $<TARGET_PROPERTY:${TARGET_NAME}_legacy,INTERFACE_INCLUDE_DIRECTORIES>)
 
@@ -237,22 +237,28 @@ if((THREADING STREQUAL "TBB" OR THREADING STREQUAL "TBB_AUTO") AND TBBROOT MATCH
     install(DIRECTORY "${TBB}/lib"
             DESTINATION runtime/3rdparty/tbb
             COMPONENT tbb)
+    # Windows only
     if(EXISTS "${TBB}/bin")
         install(DIRECTORY "${TBB}/bin"
                 DESTINATION runtime/3rdparty/tbb
                 COMPONENT tbb)
     endif()
+    # if(EXISTS "${TBB}/doc")
+    #     install(DIRECTORY "${TBB}/doc"
+    #             DESTINATION runtime/3rdparty/tbb
+    #             COMPONENT tbb)
+    # endif()
     install(FILES "${TBB}/LICENSE"
             DESTINATION runtime/3rdparty/tbb
             COMPONENT tbb)
 
-    set(IE_TBB_DIR_INSTALL "runtime/3rdarty/tbb/cmake")
+    set(IE_TBB_DIR_INSTALL "3rdparty/tbb/cmake")
     set(IE_TBB_DIR "${TBB_DIR}")
     list(APPEND PATH_VARS "IE_TBB_DIR")
 
     install(FILES "${TBB}/cmake/TBBConfig.cmake"
                   "${TBB}/cmake/TBBConfigVersion.cmake"
-            DESTINATION ${IE_TBB_DIR_INSTALL}
+            DESTINATION runtime/${IE_TBB_DIR_INSTALL}
             COMPONENT tbb)
 endif()
 
@@ -261,7 +267,7 @@ endif()
 ie_cpack_add_component(core REQUIRED DEPENDS ${core_components})
 ie_cpack_add_component(core_dev REQUIRED core ngraph_dev)
 
-install(DIRECTORY "${IE_MAIN_SOURCE_DIR}/include"
+install(DIRECTORY "${IE_MAIN_SOURCE_DIR}/include/"
         DESTINATION runtime/include/ie
         COMPONENT core_dev)
 
@@ -292,13 +298,13 @@ configure_package_config_file("${InferenceEngine_SOURCE_DIR}/cmake/templates/Inf
                                PATH_VARS ${PATH_VARS})
 
 set(IE_INCLUDE_DIR "include")
-set(IE_NGRAPH_DIR "../ngraph/cmake")
+set(IE_NGRAPH_DIR ".")
 set(IE_TBB_DIR "${IE_TBB_DIR_INSTALL}")
-set(IE_PARALLEL_CMAKE "share/ie_parallel.cmake")
+set(IE_PARALLEL_CMAKE "cmake/ie_parallel.cmake")
 
 configure_package_config_file("${InferenceEngine_SOURCE_DIR}/cmake/templates/InferenceEngineConfig.cmake.in"
                               "${CMAKE_BINARY_DIR}/share/InferenceEngineConfig.cmake"
-                              INSTALL_DESTINATION share
+                              INSTALL_DESTINATION cmake
                               PATH_VARS ${PATH_VARS})
 
 configure_file("${IE_MAIN_SOURCE_DIR}/cmake/templates/InferenceEngineConfig-version.cmake.in"
