enable pdpd in onnx scenarios

--- a/ngraph/CMakeLists.txt
+++ b/ngraph/CMakeLists.txt
@@ -104,6 +104,9 @@ endif()
 if(NGRAPH_ONNX_EDITOR_ENABLE AND NOT NGRAPH_ONNX_IMPORT_ENABLE)
     message(FATAL_ERROR "ONNX Editor component requires ONNX Importer. Set NGRAPH_ONNX_IMPORT_ENABLE=ON.")
 endif()
+if(NGRAPH_ONNX_IMPORT_ENABLE)
+    ngraph_set(NGRAPH_PDPD_FRONTEND_ENABLE ON)
+endif()
 
 message(STATUS "NGRAPH_ADDRESS_SANITIZER_ENABLE:      ${NGRAPH_ADDRESS_SANITIZER_ENABLE}")
 message(STATUS "NGRAPH_DEBUG_ENABLE:                  ${NGRAPH_DEBUG_ENABLE}")
