--- a/.gitmodules
+++ b/.gitmodules
@@ -20,4 +20,5 @@
 	ignore = dirty
 [submodule "thirdparty/gtest"]
 	path = thirdparty/gtest
-	url = https://github.com/google/googletest.git
+	url = https://github.com/openvinotoolkit/googletest.git
+	ignore = dirty
