CVS-34900: updated pugixml to v1.11.4

--- a/inference-engine/cmake/templates/InferenceEngineDeveloperPackageConfig.cmake.in
+++ b/inference-engine/cmake/templates/InferenceEngineDeveloperPackageConfig.cmake.in
@@ -51,7 +51,7 @@ foreach(component @openvino_export_components@)
     include("${CMAKE_CURRENT_LIST_DIR}/${component}_dev_targets.cmake")
 endforeach()
 
-if(USE_SYSTEM_PUGIXML)
+if(ENABLE_SYSTEM_PUGIXML)
     find_dependency(PugiXML)
     set_property(TARGET pugixml PROPERTY IMPORTED_GLOBAL TRUE)
 endif()
