Added debug suffix for ngraph dependencies

--- a/ngraph/CMakeLists.txt
+++ b/ngraph/CMakeLists.txt
@@ -129,6 +129,8 @@ set(NGRAPH_FORWARD_CMAKE_ARGS
     -DCMAKE_CXX_EXTENSIONS:BOOL=${CMAKE_CXX_EXTENSIONS}
     -DCMAKE_EXPORT_COMPILE_COMMANDS:BOOL=${CMAKE_EXPORT_COMPILE_COMMANDS}
     -DCMAKE_POSITION_INDEPENDENT_CODE:BOOL=${CMAKE_POSITION_INDEPENDENT_CODE}
+    -DCMAKE_DEBUG_POSTFIX=${CMAKE_DEBUG_POSTFIX}
+    -DCMAKE_RELEASE_POSTFIX=${CMAKE_RELEASE_POSTFIX}
     )
 
 if(CMAKE_TOOLCHAIN_FILE)
