Fixed link with pugixml

--- a/inference-engine/tests/functional/plugin/conformance/subgraphs_dumper/CMakeLists.txt
+++ b/inference-engine/tests/functional/plugin/conformance/subgraphs_dumper/CMakeLists.txt
@@ -8,6 +8,7 @@ list(APPEND DEPENDENCIES
         gflags
         inference_engine
         commonTestUtils
+        pugixml
         )
 
 addIeTargetTest(
