--- a/inference-engine/cmake/templates/InferenceEngineDeveloperPackageConfig.cmake.in
+++ b/inference-engine/cmake/templates/InferenceEngineDeveloperPackageConfig.cmake.in
@@ -25,6 +25,9 @@ foreach(option IN LISTS ie_options)
 endforeach()
 message("")
 
+# for samples in 3rd party projects
+set_and_check(gflags_DIR "@gflags_BINARY_DIR@")
+
 #
 # Content
 #
