USe pugixml::static

--- a/inference-engine/cmake/templates/InferenceEngineDeveloperPackageConfig.cmake.in
+++ b/inference-engine/cmake/templates/InferenceEngineDeveloperPackageConfig.cmake.in
@@ -54,6 +54,7 @@ endforeach()
 if(ENABLE_SYSTEM_PUGIXML)
     find_dependency(PugiXML)
     set_property(TARGET pugixml PROPERTY IMPORTED_GLOBAL TRUE)
+    add_library(IE::pugixml ALIAS pugixml)
 endif()
 
 # inherit OpenCV from main IE project if enabled
