--- a/inference-engine/tests/functional/plugin/shared/CMakeLists.txt
+++ b/inference-engine/tests/functional/plugin/shared/CMakeLists.txt
@@ -27,6 +27,7 @@ addIeTarget(
                 ${PUBLIC_HEADERS_DIR}
         LINK_LIBRARIES
             PUBLIC
+                pugixml::static
                 ${EXPORT_DEPENDENCIES}
             PRIVATE
                 inference_engine_transformations
