--- a/inference-engine/tests/ie_test_utils/functional_test_utils/CMakeLists.txt
+++ b/inference-engine/tests/ie_test_utils/functional_test_utils/CMakeLists.txt
@@ -28,7 +28,7 @@ addIeTarget(
             inference_engine
         PRIVATE
             ngraphFunctions
-            pugixml
+            pugixml::static
     INCLUDES
         PUBLIC
             $<TARGET_PROPERTY:inference_engine_plugin_api,INTERFACE_INCLUDE_DIRECTORIES>
