--- a/inference-engine/tests/functional/plugin/conformance/subgraphs_dumper/CMakeLists.txt
+++ b/inference-engine/tests/functional/plugin/conformance/subgraphs_dumper/CMakeLists.txt
@@ -4,13 +4,6 @@
 
 set(TARGET_NAME subgraphsDumper)
 
-list(APPEND DEPENDENCIES
-        gflags
-        inference_engine
-        commonTestUtils
-        pugixml
-        )
-
 addIeTargetTest(
         NAME ${TARGET_NAME}
         ROOT ${CMAKE_CURRENT_SOURCE_DIR}
@@ -18,11 +11,13 @@ addIeTargetTest(
             ${CMAKE_CURRENT_SOURCE_DIR}/include
             $<TARGET_PROPERTY:inference_engine,INTERFACE_INCLUDE_DIRECTORIES>
         DEPENDENCIES
-            ${DEPENDENCIES}
             inference_engine_ir_reader
         LINK_LIBRARIES
             PRIVATE
-                ${DEPENDENCIES}
+                gflags
+                inference_engine
+                commonTestUtils
+                pugixml::static
         ADD_CPPLINT
 )
 
