revert back gna plugin dependency

--- a/inference-engine/tests/functional/plugin/gna/CMakeLists.txt
+++ b/inference-engine/tests/functional/plugin/gna/CMakeLists.txt
@@ -7,6 +7,8 @@ set(TARGET_NAME gnaFuncTests)
 addIeTargetTest(
         NAME ${TARGET_NAME}
         ROOT ${CMAKE_CURRENT_SOURCE_DIR}
+        DEPENDENCIES
+            GNAPlugin
         LINK_LIBRARIES
             funcSharedTests
         ADD_CPPLINT
