Migrate the unary OP evaluate interface test into the unary_ops.cpp
The migrate OP includes:Mish, SoftPlus, HSigmoid, HSwish

--- a/ngraph/test/CMakeLists.txt
+++ b/ngraph/test/CMakeLists.txt
@@ -55,12 +55,9 @@ set(SRC
     op_eval/einsum.cpp
     op_eval/floor_mod.cpp
     op_eval/gelu.cpp
-    op_eval/hsigmoid.cpp
-    op_eval/hswish.cpp
     op_eval/interpolate.cpp
     op_eval/matmul.cpp
     op_eval/memory.cpp
-    op_eval/mish.cpp
     op_eval/non_zero.cpp
     op_eval/reduce_max.cpp
     op_eval/reduce_min.cpp
@@ -69,11 +66,11 @@ set(SRC
     op_eval/roi_align.cpp
     op_eval/roi_pooling.cpp
     op_eval/round.cpp
-    op_eval/softplus.cpp
     op_eval/split.cpp
     op_eval/swish.cpp
     op_eval/strided_slice.cpp
     op_eval/transpose.cpp
+    op_eval/unary_ops.cpp
     op_eval/variadic_split.cpp
     op_is.cpp
     opset1.cpp
