--- a/inference-engine/tests_deprecated/behavior/vpu/CMakeLists.txt
+++ b/inference-engine/tests_deprecated/behavior/vpu/CMakeLists.txt
@@ -68,6 +68,12 @@ function(enable_vpu TARGET_NAME FLAG_NAME PLUGIN_NAME)
     add_test(NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
     set_property(TEST ${TARGET_NAME} PROPERTY LABELS VPU MYRIAD)
 
+    if(ENABLE_DEV_PKG_INSTALL)
+        install(TARGETS ${TARGET_NAME}
+                RUNTIME DESTINATION tests
+                COMPONENT tests)
+    endif()
+
     add_dependencies(${TARGET_NAME} ${DEPENDENCIES})
 endfunction(enable_vpu)
 
