Added ngraph tests target install

--- a/ngraph/test/CMakeLists.txt
+++ b/ngraph/test/CMakeLists.txt
@@ -597,6 +597,12 @@ endif()
 if (NGRAPH_INTERPRETER_ENABLE)
     target_compile_definitions(unit-test PRIVATE NGRAPH_INTERPRETER_ENABLE)
     target_link_libraries(unit-test PRIVATE interpreter_backend)
+    if(ENABLE_DEV_PKG_INSTALL)
+        install(TARGETS interpreter_backend
+                RUNTIME DESTINATION tests
+                LIBRARY DESTINATION tests
+                COMPONENT tests)
+    endif()
 endif()
 
 ############ FRONTEND ############
@@ -605,3 +611,10 @@ target_link_libraries(unit-test PRIVATE frontend_manager)
 
 add_subdirectory(frontend)
 ### END FRONTEND ###
+
+if(ENABLE_DEV_PKG_INSTALL)
+    install(TARGETS unit-test
+            RUNTIME DESTINATION tests
+            LIBRARY DESTINATION tests
+            COMPONENT tests)
+endif()
